[package]
name = "ddlm"
version = "0.1.0"
authors = ["Balint Csergo <ohai@deathowl.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framebuffer = "0.2.2"
byteorder = "1.3"
rusttype = "0.7"
chrono = "0.4"
nix = "0.15"
memmap = "0.7.0"
lazy_static = "1.4"
termion = "1.5"
pam = "0.7.0"
users = "0.9.1"
greetd_ipc = { version = "0.6.0", features = ["sync-codec"] }
getopts = "0.2.21"
hostname = "0.3.1"
osstrtools = "0.2.2"
thiserror = "1.0.30"
freedesktop-desktop-entry = "0.5.0"
shell-words = "1.1.0"

